retail-media/v2024.10/docs/accounts-endpoints.mdx
---
title: "Accounts"
---

import { EndpointBadge } from "/snippets/EndpointBadge.jsx";


1. Guides for Retail Media API
2. [Account](/retail-media/v2024.10/docs/account)

## Introduction

An account represents a brand, agency, marketplace seller, or retailer. It serves as a business and billing entity that contains campaigns.

**Accounts are created by Criteo. Please reach out to your account representative.**

***

## **Endpoint**

| Method  | Endpoint    | Description      |
| ------- | ----------- | ---------------- |
| **GET** | `/accounts` | Get All Accounts |

***

## **Account Attributes**

<ResponseField name="id">
**Data Type:** string

**Values:** int64

**Description:** Account ID
</ResponseField>

<ResponseField name="name">
**Data Type:** string

**Values:** 510 char limit

**Description:** Account name
</ResponseField>

<ResponseField name="type">
**Data Type:** enum

**Values:** `demand`, `supply`

**Description:** Account type
</ResponseField>

<ResponseField name="subtype">
**Data Type:** enum

**Values:** `brand`, `seller`

**Description:** Account subtype
</ResponseField>

<ResponseField name="countries">
**Data Type:** string array

**Values:** ISO-3166 alpha-2 (eg.`US` , `FR`)

**Description:** Countries associated with the account
</ResponseField>

<ResponseField name="currency">
**Data Type:** string

**Values:** ISO-4217 (eg.`USD` , `EUR`)

**Description:** One single currency for billing, budgeting, bid settings & campaign performance metrics
</ResponseField>

<ResponseField name="parentAccountLabel">
**Data Type:** string

**Values:** 510 char limit

**Description:** Label used to associate multiple accounts; defaults to the account name
</ResponseField>

<ResponseField name="timeZone">
**Data Type:** string

**Values:** database tz syntax, (eg. `America/New_York`, `Europe/Paris` , `UTC`)

**Description:** Account time zone
</ResponseField>

<ResponseField name="companyName">
**Data Type:** string

**Values:** Company name

**Description:** This optional field, exclusively accessible to marketplaces within the European Union, will display the name of the company associated with the advertisement.

<Info>
**📃 *Digital Service Act (DSA)***

In compliance with the [Digital Services Act (DSA)](https://dsa-info.eu/index.php/art-24/), marketplaces within the European Union will receive information about the company name associated with each advertisement.
</Info>
</ResponseField>

<ResponseField name="onBehalfCompanyName">
**Data Type:** string

**Values:** Company name (on behalf of)

**Description:** This optional field, exclusively accessible to marketplaces within the European Union, will display the name of the company (on behalf of `companyName`) associated with the advertisement.

<Info>
**📃 *Digital Service Act (DSA)***

In compliance with the [Digital Services Act (DSA)](https://dsa-info.eu/index.php/art-24/), marketplaces within the European Union will receive information about the company name associated with each advertisement.
</Info>
</ResponseField>

***

## **Get All Accounts**

This endpoint lists all accounts accessible via your API credentials.

Responses are provided in a paginated format.

<EndpointBadge method="get">
```http
https://api.criteo.com/{version}/retail-media/accounts
```
</EndpointBadge>


<Info>
  **View in the API Reference**

  You can also see this endpoint in the [API reference](/retail-media/reference/accountsapi_getapiv1externalaccounts).
</Info>

***

### Sample Request

<CodeGroup>
  ```bash cURL
  curl -X GET "https://api.criteo.com/{version}/retail-media/accounts" \
      -H "Authorization: Bearer <MY_ACCESS_TOKEN>"
  ```

  ```python Python
  import requests

  url = "https://api.criteo.com/{version}/retail-media/accounts"

  payload={}
  headers = {
    'Accept': 'application/json',
    'Authorization': 'Bearer <MY_ACCESS_TOKEN>'
  }

  response = requests.request("GET", url, headers=headers, data=payload)

  print(response.text)
  ```

  ```java Java
  OkHttpClient client = new OkHttpClient().newBuilder()
    .build();
  MediaType mediaType = MediaType.parse("text/plain");

  RequestBody body = RequestBody.create(mediaType, "");

  Request request = new Request.Builder()
    .url("https://api.criteo.com/{version}/retail-media/accounts")
    .method("GET", body)
    .addHeader("Accept", "application/json")
    .addHeader("Authorization", "Bearer <MY_ACCESS_TOKEN>")
    .build();

  Response response = client.newCall(request).execute();
  ```

  ```php PHP
  <?php
  require_once 'HTTP/Request2.php';
  $request = new HTTP_Request2();
  $request->setUrl('https://api.criteo.com/{version}/retail-media/accounts');
  $request->setMethod(HTTP_Request2::METHOD_GET);
  $request->setConfig(array(
    'follow_redirects' => TRUE
  ));

  $request->setHeader(array(
    'Accept' => 'application/json',
    'Authorization' => 'Bearer <MY_ACCESS_TOKEN>'
  ));

  try {
    $response = $request->send();
    if ($response->getStatus() == 200) {
      echo $response->getBody();
    }
    
    else {
      echo 'Unexpected HTTP status: ' . $response->getStatus() . ' ' .
      $response->getReasonPhrase();
    }
  }

  catch(HTTP_Request2_Exception $e) {
    echo 'Error: ' . $e->getMessage();
  }
  ```
</CodeGroup>

### Sample Response

<CodeGroup>
  ```json JSON
  {
      "metadata": {
          "totalItemsAcrossAllPages": 2,
          "currentPageSize": 25,
          "currentPageIndex": 0,
          "totalPages": 1
      },
      "data": [
          {
              "id": "5",
              "type": "RetailMediaAccount",
              "attributes": {
                  "name": "Supply Demo Test Account",
                  "type": "supply",
                  "subtype": null,
                  "countries": [
                      "US"
                  ],
                  "currency": "USD",
                  "parentAccountLabel": "Supply Demo Test Account",
                  "timeZone": "America/New_York",
                  "companyName": "Supply Demo Test Account",
                  "onBehalfCompanyName": "Supply Demo Test Account"
              }
          },
          {
              "id": "368471940340928512",
              "type": "RetailMediaAccount",
              "attributes": {
                  "name": "RM API Account",
                  "type": "demand",
                  "subtype": "brand",
                  "countries": [
                      "US"
                  ],
                  "currency": "USD",
                  "parentAccountLabel": "API Account",
                  "timeZone": "America/New_York",
                  "companyName": "RM API Account",
                  "onBehalfCompanyName": "RM API Account"
              }
          }
      ]
  }
  ```
</CodeGroup>

***

## Responses

| Response | Description                |
| -------- | -------------------------- |
| 🟢`200`  | Call executed with success |

***

**What’s Next**

* [Brands](/retail-media/v2024.10/docs/brands)
* [Retailers](/retail-media/v2024.10/docs/retailers)
